fix hamburger menu shifting on darkmode toggle for small screens

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -770,7 +770,7 @@ table, th, td {
     width: 185px;
   }
 
-  #introTwo {
+  #introTwo, #introTwoDark {
     width: 280px;
   }
 
